# productivity-app

./: .gitignore  .mcp.json  README.md  pyproject.toml
backend/: auth.py  composition.py  main.py
backend/integrations/: calendar.py  composio_github.py  github.py  gmail.py  linear.py  openrouter.py  slack.py  slack_service.py
backend/models/: events.py  feed.py  identity.py  sources.py  tiers.py
backend/repositories/: connections.py  feed_repository.py  supabase_feed_repository.py
backend/services/: actions.py  classification.py  classifier.py  connections.py  feed.py  hashing.py  ingest.py  notifications.py  priority.py  ranking.py  rules.py  stats.py  sync.py
docs/: README.md  architecture.md  capabilities.md  design-system.md  mvp-plan.md  product-brief.md  product-research.md  setup.md
docs/design-research/: 00-current-state-audit.md  01-premium-apps-and-principles.md  02-typography.md  03-colour-dark-and-light.md  04-proportion-spacing-icons.md  05-gamification-that-stays-premium.md  06-social-sentiment.md  07-shortlist.md  07b-shortlist-mobile.md  08-mobile-apps.md  09-mobile-design-principles.md  README.md  (+1 more)
mobile/: .gitignore  App.tsx  package-lock.json  package.json
tests/: fake_supabase.py  fakes.py  test_actions.py  test_api.py  test_classification.py  test_classifier.py  test_composio_github.py  test_connections.py  test_feed_service.py  test_github_fixtures.py  test_ingest.py  test_notifications.py  test_priority.py  test_ranking.py  test_repository.py  test_rules.py  test_slack.py  test_slack_service.py  test_sources_mapping.py  test_sync.py
(+28 files in other folders)
