[project]
name = "productivity-app-backend"
version = "0.1.0"
description = "Backend for the unified AI work feed (GitHub tracer slice)."
requires-python = ">=3.11"
dependencies = [
    "composio>=0.18.0",
    "fastapi>=0.110",
    "pydantic>=2.6",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "supabase>=2.10",
    "uvicorn>=0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
